# ChangeLog for net-p2p/bittorrent
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.59 2005/09/02 20:25:32 hansmi Exp $

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  bittorrent-4.0.2.ebuild:
  Stable on ppc.

  30 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  bittorrent-4.0.2.ebuild:
  Stable on sparc

  25 Aug 2005; <sekretarz@gentoo.org> bittorrent-4.1.4.ebuild:
  Fixed desktop entry to fit new naming scheme, bug #103632

  25 Aug 2005; <sekretarz@gentoo.org> bittorrent-4.0.2.ebuild:
  Stable on x86 and amd64

  24 Aug 2005; <sekretarz@gentoo.org> bittorrent-3.4.2-r2.ebuild,
  -bittorrent-4.0.1.ebuild, bittorrent-4.0.2.ebuild,
  bittorrent-4.0.4.ebuild, -bittorrent-4.1.0.ebuild,
  -bittorrent-4.1.1.ebuild, -bittorrent-4.1.2.ebuild,
  bittorrent-4.1.3.ebuild, bittorrent-4.1.4.ebuild:
  Ebuild clean up. Using -pPR instead -a option in cp, bug #103487

*bittorrent-4.1.4 (24 Aug 2005)

  24 Aug 2005; <sekretarz@gentoo.org> +bittorrent-4.1.4.ebuild:
  Version bump, bug #103566

*bittorrent-4.0.4 (24 Aug 2005)

  24 Aug 2005; <sekretarz@gentoo.org> +bittorrent-4.0.4.ebuild:
  Version bump, bug #103368. Bittorrent installs now only one directory with
  docs, bug #86707

  09 Aug 2005; Rene Nussbaumer <killerfox@gentoo.org>
  bittorrent-4.1.3.ebuild:
  Added to ~hppa.

*bittorrent-4.1.3 (21 Jul 2005)

  21 Jul 2005; <sekretarz@gentoo.org> +files/btdownloadgui.desktop,
  +bittorrent-4.1.3.ebuild:
  Version bump, bug #99458

*bittorrent-4.1.2 (14 Jun 2005)

  14 Jun 2005; <sekretarz@gentoo.org> +bittorrent-4.1.2.ebuild:
  Version bump, bug #95853

  02 Jun 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  bittorrent-3.4.2-r2.ebuild, bittorrent-4.0.1.ebuild,
  bittorrent-4.0.2.ebuild, bittorrent-4.1.0.ebuild, bittorrent-4.1.1.ebuild:
  Renamed PYTHON_MODULE to PYTHON_MODNAME, so that python modules can be
  compiled/cleaned, bug #78905

*bittorrent-4.1.1 (29 May 2005)